--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Music | Festival</title>
+<base href="index.html">
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
